--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com" style="text-decoration: none;">info@ecoguk.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com" style="text-decoration: none;">info@ebenezerchurchofgoduk.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span style="text-decoration: none;">+44 7587 43 3312</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -72,11 +72,11 @@
             <li><a href="index.html" >Home</a></li>
             <li class="dropdown"><a href="about.html" class="active"><span>About Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="about.html#about">ECOG-UK</a></li>
-                <li><a href="about.html#pastor">Our Pastor</a></li>
-                <li><a href="about.html#mission">Our Mission</a></li>
-                <li><a href="about.html#admin">Our Administration</a></li>
-                <li><a href="about.html#belive">We Belive</a></li>
+                <li><a href="about.html #about">ECOG-UK</a></li>
+                <li><a href="about.html #pastor">Our Pastor</a></li>
+                <li><a href="about.html #mission">Our Mission</a></li>
+                <li><a href="about.html #admin">Our Administration</a></li>
+                <li><a href="about.html #belive">We Belive</a></li>
               </ul>
             </li>
             <li class="dropdown"><a href="ministry.html"><span>Ministry</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -143,7 +143,7 @@
               <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
             </ul> -->
             <p style="text-align: justify;">
-              Ebenezer church of God is a Pentecostal community where we demonstrate the unconditional love of god through our ministry in Ebenezer church of god, Addlestone.
+              Ebenezer church of God is a Pentecostal community where we demonstrate the unconditional love of God through our ministry in Ebenezer church of God, Addlestone.
                Our church is a body of Christ where the power of Holy Spirit is manifested. We proclaim the gospel of Jesus Christ.
             </p>
 
@@ -235,7 +235,7 @@
               </div>
               <p>
                 <!-- <i class="bi bi-quote quote-icon-left"></i> -->
-                <span>Saji Daniel(President), Bro.Blesson K Peter (Secretary), Bro.Robin (Treasurer), Bro. Sajan Thomas, Bro.Tiju, Bro.Sajan Raju  </span>
+                <span>Pr.Saji Daniel(President), Br.Blesson K Peter (Secretary), Br.Robin Simon (Treasurer), Br. Sajan Thomas (Prayer Co-ordinator), Br.Tiju Mathew (Prayer co-ordinator), Br.Sajan Raju (Media co-ordinator & Auditor) </span>
                 <!-- <i class="bi bi-quote quote-icon-right"></i> -->
               </p>
             </div>
@@ -267,7 +267,7 @@
               </div>
               <p>
                 <!-- <i class="bi bi-quote quote-icon-left"></i> -->
-                <span>Sis.Suja Saji (President), Sis.Sona Robin, Sis.Beena Sajan</span>
+                <span>Sis.Suja Saji (President), Sis.Sona Robin (secretary and treasurer) </span>
                 <!-- <i class="bi bi-quote quote-icon-right"></i> -->
               </p>
             </div>
@@ -283,12 +283,58 @@
               </div>
               <p>
                 <!-- <i class="bi bi-quote quote-icon-left"></i> -->
-                <span>Br.Tiju Mathew (HeadMaster), Sis. Suja Saji, Sis.Jissa Alwin, Sis.Soumini Ebu, Sis.Beena Sajan, Sis.Jessy Blesson, Sis.Joanna Saji -Faculty</span>
+                <span>Br.Tiju Mathew (HeadMaster), Sis. Suja Saji, Sis.Jissa Alwin, Sis.Soumini Ebu, Sis.Beena Sajan, Sis.Jessy Blesson, Sis.Joanna Saji, Sis.Achsah Saji, Sis.Kripa, Br.Blesson K Peter <b>- Faculties</b></span>
                 <!-- <i class="bi bi-quote quote-icon-right"></i> -->
               
               </p>
             </div>
           </div><!-- End testimonial item -->
+
+           <!-- Team Section -->
+    <section id="team" class=" team section">
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member d-flex align-items-center">
+              <div class="pic"><img src="assets/img/about/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Safe Guarding</h4>
+                <span>Sis.Sona Robin</span>
+                <!-- <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""> <i class="bi bi-linkedin"></i> </a>
+                </div> -->
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member d-flex align-items-center">
+              <div class="pic"><img src="assets/img/about/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Safe Guarding</h4>
+                <span>Sis.Beena Sajan</span>
+                <!-- <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""> <i class="bi bi-linkedin"></i> </a>
+                </div> -->
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+        </div>
+
+      </div>
+
+    </section><!-- /Team Section -->
 
           <!-- Portfolio Details Section -->
     <section id="portfolio-details" class="portfolio-details section">
@@ -344,11 +390,11 @@
               <h3>Church Choir Members</h3>
               <ul>
                 <li>Br.Blesson K Peter</li>
-                <li>Br.Samshudh</li>
+                <li>Br.Samshudh Abel</li>
                 <li>Br.Sajan Raju</li>
                 <li>Sis.Jessy Blesson</li>
                 <li>Sis.Shiny Sajan</li>
-                <li>Sis.Aksa Saji</li>
+                <li>Sis.Achsah Saji</li>
                 <li>Sis.Bincy Tiju</li>
               </ul>
             </div>
@@ -436,7 +482,7 @@
             <p></p>
             <p> Addlestone Community Centre, Garfield Road,Addlestone,<br>Surrey, KT15 2NJ,  United Kingdom.</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+44 7587 43 3312</span></p>
-            <p><strong>Email:</strong> <span>info@ecog.com</span></p>
+            <p><strong>Email:</strong> <span>info@ebenezerchurchofgoduk.com</span></p>
           </div>
         </div>
 
