--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com" style="text-decoration: none;">info@ecoguk.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com" style="text-decoration: none;">info@ebenezerchurchofgoduk.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span style="text-decoration: none;">+44 7587 43 3312</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -215,13 +215,13 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email Us</h3>
-              <p>info@ecog.com</p>
+              <p>info@ebenezerchurchofgoduk.com</p>
             </div>
           </div>
 
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
+            <form action="https://formsubmit.co/info@ebenezerchurchofgoduk.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -293,7 +293,7 @@
             <p></p>
             <p> Addlestone Community Centre, Garfield Road,Addlestone,<br>Surrey, KT15 2NJ,  United Kingdom.</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+44 7587 43 3312</span></p>
-            <p><strong>Email:</strong> <span>info@ecog.com</span></p>
+            <p><strong>Email:</strong> <span>info@ebenezerchurchofgoduk.com</span></p>
           </div>
         </div>
 
