--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@
 
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/info@ebenezerchurchofgoduk.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
+            <form action="https://formsubmit.co/1d5d71a16e9e953726e0fad989b8c90f" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
               <div class="row gy-4">
 
                 <div class="col-md-6">
