--- a/contact.html
+++ b/contact.html
@@ -221,11 +221,12 @@
 
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/info@ebenezerchurchofgoduk.com" method="post" data-aos="fade-up" data-aos-delay="400">
+            <form id="myForm" action="https://api.web3forms.com/submit"  method="post" data-aos="fade-up" data-aos-delay="400">
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <input type="hidden"  name="access_key" value="1dd9b381-e115-4ab2-8b33-ff8bb5c09566">
+                  <input type="text"  name="name" class="form-control" placeholder="Your Name" required="">
                 </div>
 
                 <div class="col-md-6 ">
@@ -233,7 +234,7 @@
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  <input type="text" class="form-control" name="phone" placeholder="Phone Number" required="">
                 </div>
 
                 <div class="col-md-12">
@@ -241,11 +242,11 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
+                  <!-- <div class="loading">Loading</div>
                   <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div> -->
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit" style="padding:10px 20px;border-radius: 25px;border: none;background-color: #e96b56; color:azure;">Send Message</button>
                 </div>
 
               </div>
@@ -352,6 +353,8 @@
   <!-- Preloader -->
   <div id="preloader"></div>
 
+
+ 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
