--- a/contact.html
+++ b/contact.html
@@ -245,7 +245,7 @@
                   <!-- <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div> -->
-
+ <input type="text" name="hp" style="display:none;">
                   <button type="submit" style="padding:10px 20px;border-radius: 25px;border: none;background-color: #e96b56; color:azure;">Send Message</button>
                 </div>
 
